@@ -1,3 +1,10 @@
+2009-03-12  Sven Neumann  <sven@gimp.org>
+
+	Bug 573070 – crash when working with 1x3200 pixel image
+
+	* app/display/gimpdisplayshell.c (gimp_display_shell_scale_changed):
+	make sure that x_src_dec and y_src_dec never become zero.
+
 2009-03-11  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpscanconvert.c (gimp_scan_convert_render_full):
